--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,15 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": [              
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",              
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "src/script.js"            
+            ]
           },
           "configurations": {
             "production": {
@@ -92,11 +97,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+            ]
           }
         }
       }
